Added few changes to the code 1. Split the service class into two seprate classes (added interfaces and made DI changes) 2. Changed the VehicleModel model (MakeId is no longer nullable) 3. Removed db context from both controllers 4. Fixed the issue where the code was generating an emty GUID

--- a/VehicleCRUD/VehicleCRUD.Service/VehicleCRUD.Service.csproj
+++ b/VehicleCRUD/VehicleCRUD.Service/VehicleCRUD.Service.csproj
@@ -78,10 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IVehicleService.cs" />
+    <Compile Include="IVehicleMakeService.cs" />
+    <Compile Include="IVehicleModelService.cs" />
     <Compile Include="VehicleMake.cs">
       <DependentUpon>VehicleModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="VehicleMakeService.cs" />
     <Compile Include="VehicleModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -95,12 +97,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>VehicleModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="VehicleModel1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>VehicleModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="VehicleService.cs" />
+    <Compile Include="VehicleModelService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
