--- a/VehicleCRUD/VehicleCRUD.Service/packages.config
+++ b/VehicleCRUD/VehicleCRUD.Service/packages.config
@@ -3,6 +3,8 @@
   <package id="Autofac" version="6.3.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
