--- a/VehicleCRUD/VehicleCRUD.MVC/VehicleCRUD.MVC.csproj
+++ b/VehicleCRUD/VehicleCRUD.MVC/VehicleCRUD.MVC.csproj
@@ -168,6 +168,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\VehicleMakeAndModelCount.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
