1. Added viewmodels 2. Added automapper for mapping said viewmodels 3. Added extension methods for mapping and type conversion for Troy Gode's PagedList 4. Renaming SortingFilteringPaging methods in service to FindVehicleMake and FindVehicleModel respectivly 5. Added Sorting, Filtering and Paging classes and interfaces

--- a/VehicleCRUD/VehicleCRUD.MVC/VehicleCRUD.MVC.csproj
+++ b/VehicleCRUD/VehicleCRUD.MVC/VehicleCRUD.MVC.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\VehicleMakesController.cs" />
     <Compile Include="Controllers\VehicleModelsController.cs" />
+    <Compile Include="Extension methods\Extensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
